<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m4_navigation_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for M4 robot navigation stack</description>
  <maintainer email="erwin.lejeune@tii.ae">wardn</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>m4_navigation_tracker</depend>
  <depend>m4_navigation_morph</depend>
  <depend>arrc_launch_utils</depend>
  <depend>m4_msgs</depend>
  <depend>m4_navigation_waypoints</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>